--- a/HW1solutions.tex
+++ b/HW1solutions.tex
@@ -11,7 +11,7 @@
 \begin{document}
 %---------------
 %---------------
- \title{Problem Set \# 1 Solutions}
+ \title{HW \# 1 Solutions}
 \date{}
 \maketitle
  
