--- a/HW3.tex
+++ b/HW3.tex
@@ -8,7 +8,7 @@
 \begin{document}
 %---------------
 %---------------
- \title{Problem Set \# 3}
+ \title{Homework \# 3}
 \date{}
 \maketitle
 
@@ -19,7 +19,7 @@ It is often useful for radio antennas to radiate most of their energy in particu
 
 
 \begin{problem}{2}
-You are studying a nearby planet using an infrared telescope with diameter, $D=1.0m$. (Use $10\mu m$ for infrared radiation). What is the smallest details you could resolve on the planet if you know the planet is a distance $2.0\times10^{17}m$ away?
+You are studying a distant planet using an infrared telescope with diameter, $D=1.0m$. (Use $10\mu m$ for infrared radiation). What is the smallest details you could resolve on the planet if you know the planet is a distance $2.0\times10^{17}m$ away?
 \end{problem}
 
 \begin{problem}{3}
