--- a/HW3solutions.tex
+++ b/HW3solutions.tex
@@ -8,7 +8,7 @@
 \begin{document}
 %---------------
 %---------------
- \title{Problem Set \# 3 Solutions}
+ \title{HW \# 3 Solutions}
 \date{}
 \maketitle
 
