--- a/HW4solutions.tex
+++ b/HW4solutions.tex
@@ -8,7 +8,7 @@
 \begin{document}
 %---------------
 %---------------
- \title{Problem Set \# 4 Solutions}
+ \title{HW \# 4 Solutions}
 \date{}
 \maketitle
 
